UHF-2930: Fix spacing on first accordion element and description on desktop

--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -39,7 +39,7 @@
     margin-top: $spacing-double;
 
     @include breakpoint($breakpoint-l) {
-      margin-top: $spacing-quadruple;
+      margin-top: $spacing-triple;
     }
   }
 
